<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HitsAndroid</string>
    <string name="nameProgram">AXOLOT</string>
    <string name="begin">Начать</string>
    <string name="aboutUs">О нас</string>
    <string name="main">Главная</string>
    <string name="info_icon_description">Кнопка, ведущая на страницу с инструкцией</string>
    <string name="settings_icon_description">Кнопка, ведущая на страницу с настройками</string>
    <string name="play_icon_description">Это кнопка, запускающая сформированный вами код</string>
    <string name="show_and_not_show_toolbar">Это кнопка, закрывающая и открывающая тулбар</string>
    <string name="menu_description">Это меню, где можно выбрать блок для визуального программирования</string>
    <string name="console_icon_description">Кнопка, открывающая и закрывающая консоль</string>

    <string name="Konstantin">Константин</string>
    <string name="Elena">Елена</string>
    <string name="Roman">Роман</string>
    <string name="Ivan">Иван</string>

    <string name="title_information_activity">Справка по взаимодействию с CodeBlock</string>
    <string name="lorem">Данное приложение - приложение для обучению программированию. Оно является иде для языка axolot. Так же оно умеет запускать программы на данном языке программирования. Язык устроен довольно просто. Добавляйте блоки, соеденяйте поля откуда и куда пойдут данные. И учитесь программировать.</string>

    <string name="settings">Настройки</string>
    <string name="back_to_main">Вернуться на главную</string>
    <string name="go_to_the_game">Перейти к игре</string>
    <string name="left_arrow_description">imageView, ведущая на основую страницу</string>
    <string name="right_arrow_description">imageView, ведущая на страницу, где можно начать работать</string>
    <string name="back_to_game">Играть</string>
    <string name="exit">Выход</string>

    <string name="modeDelete">Режим удаления</string>

    <string name="listBlocks">Блоки</string>
    <string name="defaultNameBlock">block</string>

    <string name="console">Это консоль</string>

    <string name="variable">variable</string>
    <string name="AddPin">Add Pin</string>
    <string name="inputText">Input</string>
    <string name="outputText">Output</string>
    <string name="inputExecuteText">Input execute</string>
    <string name="outputExecuteText">Output execute</string>
    <string name="descriptionText">description</string>

    <style name="backToMain">Back To Main</style>

    <string name="returnBlock">Return Block</string>

    <string name="blockSET">Set</string>
    <string name="blockGet">Get</string>
    <string name="blockEdit" tools:ignore="ExtraTranslation">Edit</string>
    <string name="blockDelete" tools:ignore="ExtraTranslation">Delete</string>
    <string name="blockBranch">Branch</string>
    <string name="inputData">Condition</string>
    <string name="outputTrue">True</string>
    <string name="outputFalse">False</string>
    <string name="titleMacros">Макросы</string>

    <string-array name="typeBlock">
        <item>Boolean</item>
        <item>Integer</item>
        <item>Float</item>
        <item>String</item>
    </string-array>

    <string name="titleVariable">Переменные</string>
    <string-array name="btnBlocksVariables">
        <item>Integer</item>
        <item>Double</item>
        <item>Boolean</item>
        <item>String</item>
    </string-array>

    <string-array name="listBlocks">
        <item name="native.while">while</item>
        <item>for</item>
        <item>forEach</item>
        <item>if else</item>
        <item>main</item>
        <item>print string</item>
        <item>сложение</item>
    </string-array>

    <string name="hintEditText">Enter name</string>

    <string name="function_end">Return</string>
    <string name="macros_begin">Input</string>
    <string name="macros_end">Output</string>
    <string name="native.main">Main</string>
    <string name="native.getVariable">Get</string>
    <string name="native.setVariable">Set</string>
    <string name="native.while">While</string>
    <string name="native.for">For</string>
    <string name="native.sequence">Sequence</string>
    <string name="native.foreach">ForEach</string>
    <string name="native.branch">If Else</string>
    <string name="native.whileLoop">While Loop</string>
    <string name="native.print">Print String</string>
    <string name="native.sleep">Thread Sleep</string>

    <string name="native.regexMatch">Regex Match</string>
    <string name="native.regexFind">Regex Find</string>

    <string name="native.async">Async</string>
    <string name="native.input">Read</string>
    <string name="native.math">Expression</string>

    <string name="native.sumStrings">string + string</string>

    <string name="native.math.boolean.or">OR</string>
    <string name="native.math.boolean.and">AND</string>
    <string name="native.math.boolean.not">NOT</string>

    <string name="native.math.int.sum">Int + Int</string>
    <string name="native.math.int.sub">Int - Int</string>
    <string name="native.math.int.mul">Int * Int</string>
    <string name="native.math.int.div">Int / Int</string>
    <string name="native.math.int.mod">Int % Int</string>
    <string name="native.math.int.abs">Abs |Int|</string>
    <string name="native.math.int.min">Min Int</string>
    <string name="native.math.int.max">Max Int</string>
    <string name="native.math.int.equals">Int == Int</string>
    <string name="native.math.int.notEquals">Int != Int</string>
    <string name="native.math.int.less">Int &lt; Int</string>
    <string name="native.math.int.lessOrEquals">Int &lt;= Int</string>
    <string name="native.math.int.more">Int &gt; Int</string>
    <string name="native.math.int.moreOrEquals">Int &gt;= Int</string>

    <string name="native.math.float.sum">Float + Float</string>
    <string name="native.math.float.sub">Float - Float</string>
    <string name="native.math.float.mul">Float * Float</string>
    <string name="native.math.float.div">Float / Float</string>
    <string name="native.math.float.mod">Float % Float</string>
    <string name="native.math.float.abs">Abs |Float|</string>
    <string name="native.math.float.min">Min Float</string>
    <string name="native.math.float.max">Max Float</string>
    <string name="native.math.float.equals">Float == Float</string>
    <string name="native.math.float.notEquals">Float != Float</string>
    <string name="native.math.float.less">Float &lt; Float</string>
    <string name="native.math.float.lessOrEquals">Float &lt;= Float</string>
    <string name="native.math.float.more">Float &gt; Float</string>
    <string name="native.math.float.moreOrEquals">Float &gt;= Float</string>

    <string name="native.math.log">Log</string>
    <string name="native.math.sin">Sin</string>
    <string name="native.math.cos">Cos</string>
    <string name="native.math.tan">Tan</string>
    <string name="native.math.asin">ArcSin</string>
    <string name="native.math.acos">ArcCos</string>
    <string name="native.math.atan">ArcTan</string>

    <string name="native.localVariable.boolean">Local Bool</string>
    <string name="native.localVariable.int">Local Int</string>
    <string name="native.localVariable.float">Local Float</string>
    <string name="native.localVariable.string">Local String</string>

    <string name="native.assignVariable.boolean">Assign Bool</string>
    <string name="native.assignVariable.int">Assign Int</string>
    <string name="native.assignVariable.float">Assign Float</string>
    <string name="native.assignVariable.string">Assign String</string>

    <string name="native.cast.int_boolean">Int -> Bool</string>
    <string name="native.cast.int_float">Int -> Float</string>
    <string name="native.cast.int_string">Int -> String</string>
    <string name="native.cast.float_boolean">Float -> Bool</string>
    <string name="native.cast.float_int">Float -> Int</string>
    <string name="native.cast.float_string">Float -> String</string>
    <string name="native.cast.boolean_int">Bool -> Int</string>
    <string name="native.cast.boolean_float">Bool -> Float</string>
    <string name="native.cast.boolean_string">Bool -> String</string>
    <string name="native.cast.string_boolean">String -> Bool</string>
    <string name="native.cast.string_int">String -> Int</string>
    <string name="native.cast.string_float">String -> Float</string>

    <string name="titleFunctions">Функции</string>
    <string name="newFunction">Добавить новую функцию</string>
    <string name="console_scroll_view_description">Здесь будут находится ваши запросы, ответы на ваши запросы, результаты работы программы</string>

    <string name="intsruction">Программа на нашем языке программирования состоит из набора блоков, соединенных между собой связями. Связи делятся на два типа.
Первый тип - линии очередности выполнения. Они показывают в каком порядке будут выполняться блоки.
Второй тип - линии передачи данных. По ним передаются данные между блоками.
Главный блок - main. Он является точкой начала исполнения программы. Любая программа содержит в себе блок main. От него отходит одна линия очередности выполнения. Так, блок к которому присоединяется линяя очередности от main будет исполнятся первым.
Некоторые блоки принимают на вход данные. Для примера блок print string принимает на вход строку. Кроме того наш язык предоставляет возможность не подавать данные. Тогда будут использованные данные из поля default.
Поговорим о некоторых блоках в отдельности.
Упомянутый выше print string печатает в консоль строку.
Давайте рассмотрим основные ноды:
Input String - считывает строку из консоли.
Set Variable - задает значение переменной
Get Variable - принимает значение переменной.
Cast - переводит одну воду в другой.
Sequence - исполняет блоки по очереди
Branch - исполняет блоки в зависимости от условия.
Давайте рассмотрим еще несколько важных понятий.
Макросы. - по сути макрос - это заготовка кода, которая напрямую копируется в место использования.
Функции - почти как макрос, но поддерживает рекурсию и обладает локальной памятью.
</string>

</resources>