<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutUsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    tools:context=".AboutUsActivity">

    <ImageView
        android:id="@+id/informationIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/info_icon_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_info_icon" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/settings_icon_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_settings_icon" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/bg_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/toMainPage"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/main"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.545"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/toAboutUsPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/aboutUs"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_bias="0.545" />

    <Button
        android:id="@+id/RomanButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Roman"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/IvanButton"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/IvanButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Ivan"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"

        app:layout_constraintStart_toEndOf="@id/RomanButton"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.255" />

    <Button
        android:id="@+id/ElenaButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Elena"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/KonstantinButton"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RomanButton"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/KonstantinButton"
        android:layout_width="170dp"
        android:layout_height="75dp"
        android:backgroundTint="@color/buttons"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/Konstantin"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.581"

        app:layout_constraintStart_toEndOf="@id/ElenaButton"
        app:layout_constraintTop_toBottomOf="@+id/IvanButton"
        app:layout_constraintVertical_bias="0.449" />

</androidx.constraintlayout.widget.ConstraintLayout>