<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/settings"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        style="@style/textViewStyle" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="600dp"
        android:layout_height="280dp"
        android:background="@drawable/round_rectangle"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSettings">

        <Button
            android:id="@+id/exit"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:paddingStart="104dp"
            android:paddingEnd="104dp"
            android:layout_marginBottom="35dp"
            android:text="@string/exit"
            android:backgroundTint="@color/bg_btn_for_fragments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/btnForFragmentSave" />

        <Button
            android:id="@+id/goToMain"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:text="@string/back_to_main"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:backgroundTint="@color/bg_btn_for_fragments"
            app:layout_constraintBottom_toTopOf="@+id/exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backToGame"
            style="@style/btnForFragmentSave" />

        <Button
            android:id="@+id/backToGame"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginTop="35dp"
            android:text="@string/back_to_game"
            android:paddingEnd="45dp"
            android:paddingStart="45dp"
            android:backgroundTint="@color/bg_btn_for_fragments"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/btnForFragmentSave" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>