<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/blockVariable"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:background="@drawable/shape_rect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="4dp"
            android:text="@string/inputData"
            app:layout_constraintStart_toEndOf="@+id/NodeInput"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="69dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/NodeInput"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button_shape_circle_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mainNodeOutput"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape_circle_stroke"
            app:layout_constraintBottom_toTopOf="@id/nodeOutput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.746"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.763"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nodeOutput"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="28dp"
            android:background="@drawable/button_shape_circle_stroke"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mainNodeInput"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_shape_circle_stroke"
            app:layout_constraintBottom_toTopOf="@id/NodeInput"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.253"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.21"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/blockBranch"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/returnTrue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outputTrue"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/mainNodeOutput"
            tools:layout_editor_absoluteY="53dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/returnFalse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outputFalse"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@+id/nodeOutput"
            tools:layout_editor_absoluteX="172dp"
            tools:layout_editor_absoluteY="77dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</merge>